fix: misalignment of input in add expense page

--- a/src/app/shared/components/fy-currency/fy-currency.component.scss
+++ b/src/app/shared/components/fy-currency/fy-currency.component.scss
@@ -7,8 +7,8 @@
     font-size: 12px;
     line-height: 16px;
     font-weight: 400;
-    line-height: 1.5;
     color: colors.$black-light;
+    margin-bottom: 0;
   }
 
   &--input {
@@ -17,8 +17,9 @@
     color: colors.$blue-black;
     border: none;
     width: 100%;
-    margin: 6px 0;
-    padding-left: 0;
+    height: 24px;
+    margin: 4px 0;
+    padding: 0;
   }
 
   &--input-invalid {
@@ -34,12 +35,22 @@
 
   &--input-container {
     border-bottom: 1px solid colors.$grey-lighter;
+    display: flex;
+    flex-direction: column;
+    min-height: 32px;
   }
 
   &--form {
     display: flex;
     align-items: flex-start;
-    height: 70px;
+    min-height: 70px;
+    gap: 0;
+  }
+
+  &--input-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
   }
 
   &--amount {
